# GLGFX

./: Audio.h  CreateAsset.cpp  GFX3D.h  GLGFX.h  Makefile  README.md  SampledAudio.h  Sprite.h  Widgets.h  nesfont8x8.c  retina_helper.mm
Breakout/: Breakout.h  CMakeLists.txt  README.md  main.cpp
Breakout/sfx/: break.raw  gameover.raw  levelup.raw  paddle.raw
Destroyer/: CMakeLists.txt  Destroyer.h  README.md  main.cpp
Destroyer/gfx/: barrel.sprite  destroyer.sprite  submarine.sprite
Destroyer/sfx/: bonus.raw  charge.raw  gameover.raw  lost.raw  ping.raw  release.raw
FlappyBird/: CMakeLists.txt  FlappyBird.h  README.md  main.cpp
FlappyBird/gfx/: birds.sprite  pipe.sprite
FlappyBird/sfx/: die.raw  hit.raw  point.raw  swooshing.raw  wing.raw
Frogger/: CMakeLists.txt  Frogger.h  README.md  main.cpp
Frogger/sfx/: hop.c  music.c  plunk.c  squash.c  timeout.c  winner.c
GFXEngine/: CMakeLists.txt  GFXEngine.h  README.md  main.cpp
GameOfLife/: CMakeLists.txt  GameOfLife.h  README.md  main.cpp
MineSweeper/: CMakeLists.txt  MineSweeper.h  README.md  main.cpp
MineSweeper/sfx/: lose.raw  tick.raw  win.raw
Paratroopers/: CMakeLists.txt  Paratroopers.h  README.md  main.cpp
Paratroopers/engine/: CMakeLists.txt  Makefile
Paratroopers/engine/include/: Airplane.h  Arena.h  BaseObject.h  Bomb.h  Bullet.h  Cannon.h  Helicopter.h  Paratrooper.h  Phase.h  PhaseData.h  Ufo.h
Paratroopers/engine/sfx/: destroy.c  et.c  falling.c  fire.c  flyby.c  jump.c  missile.c  pass.c
Paratroopers/engine/src/: Airplane.cpp  Arena.cpp  BaseObject.cpp  Bomb.cpp  Bullet.cpp  Cannon.cpp  Helicopter.cpp  Paratrooper.cpp  Phase.cpp  PhaseData.cpp  Ufo.cpp
Snake/: CMakeLists.txt  README.md  Snake.h  main.cpp
Synth/: CMakeLists.txt  README.md  Synth.h  main.cpp
Tetris/: CMakeLists.txt  README.md  Tetris.h  main.cpp
Tetris/gfx/: castle.c  forest.c  island.c  skyline.c  taj.c  wolf.c
Tetris/sfx/: bounce.c  gameover.c  tada.c  tick.c
